simplify cwt to use in-place

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rustfft = "~6.1.0"
 pyo3 = { version = "0.18.1", features = ["extension-module", "num-complex"] }
 num-traits = "~0.2"
 numpy="~0.18"
+collect_slice = "^1.2.0"
 
 
 
