--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rustlets"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -15,8 +15,8 @@ num-complex = "~0.4.3"
 rustfft = "~6.1.0"
 pyo3 = { version = "0.18.1", features = ["extension-module", "num-complex"] }
 num-traits = "~0.2"
-numpy="~0.18"
-rayon = "1.7"
 
-
-
+[profile.release]
+opt-level="s"
+lto="fat"
+codegen-units=1
