--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,11 +63,11 @@ jobs:
 
       - name: Add poetry to path
         if:  matrix.os != 'windows-latest'
-        run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
+        run: echo "${HOME}/.local/bin" >> $GITHUB_PATH
       
       - name: Add poetry to path
         if:  matrix.os == 'windows-latest'
-        run: echo "${HOME}/.poetry/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        run: echo "C:\Users\runneradmin\AppData\Roaming\Python\Scripts" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Install package deps
         run: | 
