--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ classifiers = [
 
 [tool.poetry]
 name = "rustlets"
-version = "0.3.1"
-description = "A wavelet library written in Rust, with bindings to python."
+version = "0.3.2"
+description = "A multithreaded wavelet library written in Rust, with bindings to python."
 authors = ["Jack Ruder <jackruder14@gmail.com>"]
 readme = "README.md"
 repository = "https://github.com/jackruder/rustlets"
